fix dropdown overlay in find-apartments-card block

--- a/src/blocks/find-apartments-card/find-apartments-card.pug
+++ b/src/blocks/find-apartments-card/find-apartments-card.pug
@@ -11,7 +11,7 @@ mixin apartments()
             inLabel: "Прибытие",
             outLabel: "Выезд"
           })
-        .find-apartments-card__item
+        .find-apartments-card__item.find-apartments-card__item--primary
           h3.find-apartments-card__subtitle Гости
           input.js-dropdown-find-apartments
       .find-apartments-card__button
