--- a/src/blocks/calendar/datepicker.scss
+++ b/src/blocks/calendar/datepicker.scss
@@ -1,7 +1,7 @@
 @import '../../scss/colors.scss';
-@import '../../../node_modules/air-datepicker/src/sass/datepicker.scss';
-@import '../../../node_modules/air-datepicker/src/sass/navigation.scss';
-@import '../../../node_modules/air-datepicker/src/sass/cell.scss';
+@import '~air-datepicker/src/sass/datepicker.scss';
+@import '~air-datepicker/src/sass/navigation.scss';
+@import '~air-datepicker/src/sass/cell.scss';
 
 .datepicker {
   font-family: Montserrat, OpenSans, sans-serif;
