--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -1,4 +1,4 @@
-@import '../../../node_modules/ion-rangeslider/css/ion.rangeslider.css';
+@import '~ion-rangeslider/css/ion.rangeslider.css';
 @import '../../scss/colors.scss';
 
 .irs--flat .irs-min,
