#19 rebase plugins styles in pluigns directory

--- a/src/scss/plugins/datepicker.scss
+++ b/src/scss/plugins/datepicker.scss
@@ -1,4 +1,4 @@
-@import '../../scss/colors.scss';
+@import '../colors.scss';
 @import '~air-datepicker/src/sass/datepicker.scss';
 @import '~air-datepicker/src/sass/navigation.scss';
 @import '~air-datepicker/src/sass/cell.scss';
