--- a/src/scss/plugins/slider.scss
+++ b/src/scss/plugins/slider.scss
@@ -1,5 +1,5 @@
 @import '~ion-rangeslider/css/ion.rangeslider.css';
-@import '../../scss/colors.scss';
+@import '../colors.scss';
 
 .irs--flat .irs-min,
 .irs--flat .irs-max {
