#20 change socials buttons to links

--- a/src/blocks/socials/socials.pug
+++ b/src/blocks/socials/socials.pug
@@ -1,5 +1,5 @@
 mixin socials()
   .socials
-    button.socials__button.socials__button--twitter
-    button.socials__button.socials__button--fb
-    button.socials__button.socials__button--instagram
+    a.socials__link.socials__link--twitter(href="http://twitter.com" target="_blank")
+    a.socials__link.socials__link--fb(href="http://facebook.com" target="_blank")
+    a.socials__link.socials__link--instagram(href="http://instagram.com" target="_blank")
