--- a/src/blocks/socials/socials.scss
+++ b/src/blocks/socials/socials.scss
@@ -3,8 +3,7 @@
 .socials {
   display: flex;
 
-  &__button {
-    border: none;
+  &__link {
     font-family: 'Font Awesome';
     width: 28px;
     height: 24px;
