--- a/src/pages/colors-type/colors-type.scss
+++ b/src/pages/colors-type/colors-type.scss
@@ -1,7 +1,7 @@
 @import '../../scss/sizes.scss';
 @import '../../scss/colors.scss';
 
-.color-types {
+.colors-type {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
