--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -8,10 +8,10 @@ html
   head
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
     meta(name="viewport" content="initial-scale=1.0, width=device-width")
-    link(rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png")
-    link(rel="icon" type="image/png" sizes="32x32" href="../favicons/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="../favicons/favicon-16x16.png")
-    link(rel="mask-icon" href="../favicons/safari-pinned-tab.svg" color="#5bbad5")
+    link(rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png")
+    link(rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png")
+    link(rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5")
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="#ffffff")
     meta(name="keywords", content="fsd template")
