--- a/src/blocks/socials/socials.scss
+++ b/src/blocks/socials/socials.scss
@@ -14,6 +14,10 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
+    &:last-child {
+      margin-right: 0;
+    }
+
     &--twitter::before {
       content: '\f099';
     }
