--- a/src/blocks/text-field/text-field.scss
+++ b/src/blocks/text-field/text-field.scss
@@ -7,6 +7,7 @@
   font-size: 0.875rem;
   padding: 13px 15px 13px 15px;
   width: 100%;
+  letter-spacing: 1px;
 
   &::placeholder {
     color: $dark-shade-25;
