--- a/src/blocks/register-card/register-card.pug
+++ b/src/blocks/register-card/register-card.pug
@@ -32,4 +32,4 @@ mixin register-card()
       .register-card__main-button
         +long-button("Перейти к оплате")
     .register-card__block.register-card__block--margin-large
-      +account("Уже есть аккаунт на Toxin", "Войти")
+      +account({text: "Уже есть аккаунт на Toxin", buttonText: "Войти"})
