--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -22,6 +22,7 @@ block content
             })
           .search-room--index-100
             .search-room__sidebar-item
+              .search-room__subtitle Гости
               input.js-dropdown-guests
           .search-room__sidebar-item
             h3.search-room__sidebar-item-title Диапазон цен
