--- a/src/blocks/radio/radio.scss
+++ b/src/blocks/radio/radio.scss
@@ -19,6 +19,7 @@
     height: 20px;
     border-radius: 100%;
     border: 1px solid $dark-shade-25;
+    box-sizing: border-box;
   }
 
   &__input:checked,
@@ -30,10 +31,12 @@
   &__input:checked ~ &__marker:after {
     content: "";
     position: absolute;
-    top: 3px;
-    left: 3px;
-    width: 12px;
-    height: 12px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 60%;
+    box-sizing: border-box;
     background-image: linear-gradient(180deg, $purple 0%, #8ba4f9 100%);
     border-radius: 100%;
   }
