--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -20,10 +20,8 @@
 
   &__header {
     font-family: Quicksand, OpenSans, sans-serif;
-    line-height: 1.875rem;
+    margin: 4px 0 0 0;
     grid-column: 1/-1;
-    line-height: 1;
-    padding-top: 6px;
     font-size: 1.5rem;
     color: $dark-shade-100;
   }
@@ -39,14 +37,22 @@
 
   &__sidebar-item-title {
     font-family: Montserrat, OpenSans, sans-serif;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     color: $dark-shade-100;
     text-transform: uppercase;
     font-size: .75rem;
   }
 
   &__sidebar-item {
-    margin-bottom: 30px;
+    margin-bottom: 16px;
+  }
+
+  &__subtitle {
+    font-family: Montserrat, OpenSans, sans-serif;
+    color: $dark-shade-100;
+    text-transform: uppercase;
+    font-size: .75rem;
+    font-weight: bold;
   }
 
   &__last-item {
