--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -192,10 +192,8 @@ block content
 
       .form-elements__right 
         .form-elements__item
-          .form-elements__head.form-elements__head--accent
-            .form-elements__title Range slider
           .form-elements__slider
-            +slider()
+            +slider({title: "Range slider"})
 
         .form-elements__item
           .form-elements__head.form-elements__head--accent
