--- a/src/blocks/slider/slider.scss
+++ b/src/blocks/slider/slider.scss
@@ -1,14 +1,30 @@
 @import '../../scss/colors.scss';
 
 .slider {
+  font-family: Montserrat, OpenSans, sans-serif;
+  text-transform: uppercase;
+  font-size: .75rem;
+  line-height: .625rem;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__title {
+    font-weight: bold;
+    color: $dark-shade-100;
+  }
+
   &__min-max {
-    font-family: Montserrat, OpenSans, sans-serif;
-    position: relative;
-    top: -20px;
-    font-size: .75rem;
-    line-height: .9375rem;
-    text-transform: uppercase;
     text-align: right;
     color: $dark-shade-50;
+  }
+
+  &__footer {
+    text-transform: none;
+    line-height: .875rem;
+    color: $dark-shade-50;
+    margin-top: 6px;
   }
 }
