--- a/src/blocks/range-dates/range-dates.pug
+++ b/src/blocks/range-dates/range-dates.pug
@@ -1,18 +1,16 @@
 include ../calendar/calendar
+include ../dropdown-field/dropdown-field
 
-mixin range-dates({inLabel, outLabel})
+mixin range-dates({ inLabel, outLabel })
   .range-dates
     +calendar()
-    label.range-dates__label.range-dates__label--width-small= inLabel
-      span.range-dates__wrapper
-        input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")
-    label.range-dates__label.range-dates__label--width-small= outLabel
-      span.range-dates__wrapper
-        input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")
-
-
-mixin date-dropdown({date, label})
-  .range-dates
-    label.range-dates__label= label
-      span.range-dates__wrapper
-        input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ" value=date)
+    .range-dates__input
+      +dropdown-field({ title: inLabel, placeholder: "ДД.ММ.ГГГГ" })
+    .range-dates__input
+      +dropdown-field({ title: outLabel, placeholder: "ДД.ММ.ГГГГ" })
+    //- label.range-dates__label.range-dates__label--width-small= inLabel
+    //-   span.range-dates__wrapper
+    //-     input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")
+    //- label.range-dates__label.range-dates__label--width-small= outLabel
+    //-   span.range-dates__wrapper
+    //-     input.range-dates__date-dropdown(placeholder="ДД.ММ.ГГГГ")
