--- a/src/blocks/range-dates/range-dates.scss
+++ b/src/blocks/range-dates/range-dates.scss
@@ -4,59 +4,7 @@
   display: flex;
   justify-content: space-between;
 
-  &__label {
-    width: 100%;
-    font-family: Montserrat, OpenSans, sans-serif;
-    font-weight: bold;
-    font-size: .75rem;
-    line-height: .9375rem;
-    text-transform: uppercase;
-    color: $dark-shade-100;
-
-    &--width-small {
-      width: 150px;
-    }
-  }
-
-  &__wrapper {
-    display: block;
-    position: relative;
-    padding-top: 6px;
-
-    &::after {
-      position: absolute;
-      font-family: 'Material Icons';
-      font-size: 1.5rem;
-      content: '\e313';
-      text-align: center;
-      line-height: 3.625rem;
-      color: $dark-shade-50;
-      top: 0;
-      right: 0;
-      width: 44px;
-      height: 44px;
-    }
-  }
-
-  &__date-dropdown {
-    color: $dark-shade-75;
-    border: 1px solid $dark-shade-25;
-    border-radius: 4px;
-    font-size: 0.875rem;
-    line-height: 1.125rem;
-    padding-left: 14px;
-    padding-bottom: 6px;
-    letter-spacing: 1px;
-    width: 100%;
-    height: 44px;
-
-    &:hover,
-    &:focus {
-      border-color: $dark-shade-50;
-
-      &::placeholder {
-        color: $dark-shade-75;
-      }
-    }
+  &__input {
+    width: 150px;
   }
 }
