--- a/src/blocks/dropdown-field/dropdown-field.pug
+++ b/src/blocks/dropdown-field/dropdown-field.pug
@@ -2,4 +2,5 @@ mixin dropdown-field({ title, placeholder, value })
   .dropdown-field
     if title
       .dropdown-field__title= title
-    input.dropdown-field__input(placeholder=placeholder value=value)
+    .dropdown-field__icon-wrapper
+      input.dropdown-field__input(placeholder=placeholder value=value)
