--- a/src/blocks/dropdown-field/dropdown-field.scss
+++ b/src/blocks/dropdown-field/dropdown-field.scss
@@ -2,13 +2,28 @@
 
 .dropdown-field {
   font-family: Montserrat, OpenSans, sans-serif;
-  position: relative;
 
   &__title {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 0.75rem;
     color: $dark-shade-100;
+  }
+
+  &__icon-wrapper {
+    position: relative;
+
+    &:after {
+      position: absolute;
+      font-family: "Material Icons";
+      font-size: 1.5rem;
+      content: "\e313";
+      text-align: center;
+      line-height: 3.625rem;
+      color: $dark-shade-50;
+      top: -5px;
+      right: 10px;
+    }
   }
 
   &__input {
@@ -20,19 +35,5 @@
     border: 1px solid $dark-shade-25;
     border-radius: 4px;
     color: $dark-shade-75;
-  }
-
-  &:after {
-    position: absolute;
-    font-family: "Material Icons";
-    font-size: 1.5rem;
-    content: "\e313";
-    text-align: center;
-    line-height: 3.625rem;
-    color: $dark-shade-50;
-    top: 19px;
-    right: 0;
-    width: 44px;
-    height: 44px;
   }
 }
