#2 fix pp in menu and header blocks

--- a/src/blocks/icon-button/icon-button.pug
+++ b/src/blocks/icon-button/icon-button.pug
@@ -1,5 +1,2 @@
-mixin icon-button({icon, isMenu = false})
-  - const classes = ["icon-button"]
-  if isMenu
-    - classes.push("js-menu-button")
-  button(class=classes)= icon
+mixin icon-button({ icon })
+  button.icon-button.js-button= icon
