--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -60,7 +60,6 @@
   }
 
   &__enter-panel {
-    padding-left: 20px;
     display: flex;
     justify-content: space-between;
 
@@ -74,6 +73,7 @@
   }
 
   &__menu {
+    margin: 4px 4px 0 0;
 
     @media (max-width: 767px) {
       width: 100%;
