#21 added parameters to invoice mixin and change call it

--- a/src/blocks/booking-card/booking-card.pug
+++ b/src/blocks/booking-card/booking-card.pug
@@ -20,6 +20,14 @@ mixin booking-card()
         h3.booking-card__subtitle Гости
         +configuration-dropdown({ name: "booking" })
       .booking-card__invoice
-        +invoice()
+        +invoice({ 
+          standing: "9 990&#8381; х 4 суток",
+          standingPrice: "39 960&#8381;",
+          services: "Сбор за услуги: скидка 2 179&#8381;",
+          servicesPrice: "0&#8381;",
+          additional: "Сбор за дополнительные услуги",
+          additionalPrice: "300&#8381;",
+          total: "38 081&#8381;",
+        })
       .booking-card__item
         +long-button("Забронировать")
