--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -64,7 +64,7 @@ html
         menu: menu
       })
     .headers-footers__item
-      +header({isLogged: true, menu: menu})
+      +header({isLogged: true, menu: menu, username: "Cosmin Negoita"})
     .headers-footers__item.headers-footers__item--down
       +footer({
         main: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis",
