#21 added parameter in light-footer

--- a/src/blocks/light-footer/light-footer.pug
+++ b/src/blocks/light-footer/light-footer.pug
@@ -1,10 +1,8 @@
 include ../socials/socials
 include ../site-logo/site-logo
 
-mixin light-footer()
+mixin light-footer({ text })
   footer.light-footer
     +site-logo()
-    .light-footer__content
-      | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
-      | eget nullam pellentesque aliquam curabitur cociis.
+    .light-footer__content= text
     +socials()
