--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -104,4 +104,4 @@ html
         }
       })
     .headers-footers__item
-      +light-footer()
+      +light-footer({text: "Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis."})
